[package]
name = "ray_tracing_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.0"
cgmath = "0.18.0"
eframe = { version = "0.31.1", features = ["wgpu"] }
egui = { version = "0.31.1", features = ["bytemuck"] }
env_logger = "0.11.8"
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.27"
