[package]
name = "ray_tracing_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18"
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
encase = { version = "0.11", features = ["cgmath"] }
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4"
rand = "0.9"
tobj = "4.0"
