[package]
name = "ray_tracing_wgpu"
version = "0.1.0"
authors = ["Jack Lo <jet22854111@gmail.com>"]
edition = "2024"

[profile.release]
opt-level = 2

[dependencies]
cgmath = "0.18"
egui = "0.31"
encase = { version = "0.11", features = ["cgmath"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4"
rand = "0.9"
tobj = "4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.31", features = ["wgpu"] }
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["wgpu"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
web-sys = "0.3"
